#32 more refactor and PR fixes