@@ -1,10 +1,13 @@
 package com.studyplanner.service;
 
 import com.studyplanner.client.OisClient;
+import com.studyplanner.client.dto.OisCourseFullResponse;
 import com.studyplanner.client.dto.OisCourseResponse;
 import com.studyplanner.client.dto.OisVersionResponse;
 import com.studyplanner.dto.CourseResponse;
+import com.studyplanner.entity.Course;
 import com.studyplanner.mapper.CourseMapper;
+import com.studyplanner.repository.CourseRepository;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -17,6 +20,7 @@ import org.springframework.stereotype.Service;
 public class CourseService {
 
   private final OisClient oisClient;
+  private final CourseRepository courseRepository;
 
   public List<CourseResponse> getAllCourses(int start, int take, String title, String code) {
     List<OisCourseResponse> oisCourses = oisClient.getAllCourses(start, take, title, code);
@@ -25,6 +29,19 @@ public class CourseService {
     return oisCourses.stream()
         .map(course -> mapToCourseResponse(course, versionsByCourseUuid))
         .toList();
+  }
+
+  public List<Course> fetchCoursesByVersionExternalIds(List<UUID> courseVersionExternalIds) {
+    return courseRepository.findAllByCourseVersionExternalIdIn(courseVersionExternalIds);
+  }
+
+  public Course getFromOisAndSaveCourse(UUID courseExternalId, UUID courseVersionExternalId) {
+    OisCourseFullResponse response =
+        oisClient.getCourseByVersionExternalId(courseExternalId, courseVersionExternalId);
+
+    Course course = CourseMapper.mapToCourse(response);
+
+    return courseRepository.save(course);
   }
 
   private Map<UUID, List<OisVersionResponse>> getVersionsByCourseUuid(
@@ -52,7 +69,7 @@ public class CourseService {
     List<OisVersionResponse> versions =
         versionsByCourseUuid.getOrDefault(course.externalId(), List.of());
 
-    OisVersionResponse firstVersion = versions.isEmpty() ? null : versions.get(0);
+    OisVersionResponse firstVersion = versions.isEmpty() ? null : versions.getFirst();
 
     return CourseMapper.mapOisToResponse(course, firstVersion);
   }
